--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
         <script src="Scripts/App.js" defer></script>
     </head>
     <body>
-        <!--Create your basic html elements here -->
+        <div id="back"></div>
+        <div id="face"></div>
+        <div id="eye1"></div>
+        <div id="eye2"></div>
+        <div id="mouth"></div>
+        <div id="hole"></div>
+        <div id="nose"></div>
+        <div id="hat"></div>
+        <div id="hatTop"></div>
+        <div id="text"><h1>Merry Christmas!</h1></div>
+        <audio controls>
+            <source src="SnapSave.io - Christmas! Just a week away! (64 kbps).mp3" type="audio/mpeg">
+        </audio>
     </body>
 </html>
